assets/main.css
/** General **/

html {
    margin-left: calc(100vw - 100%);
    margin-right: 0;
    scroll-behavior: smooth;
    box-sizing: border-box;
    background-color: rgb(255, 102, 102);
	background: linear-gradient(-45deg, #F59E0B, #DB2777, #0995ad, #38BDF8);
	background-size: 400% 400%;
	animation: gradient 60s ease infinite;
	height: 100vh;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, "Ubuntu", "Noto Sans", "Droid Sans", Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !important;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

body {
    height: 100%;
    max-width: 1000px;
    margin: 0 auto;
    overflow-x: hidden;
}

@media screen and (min-width: 715px) {
    body {
        display: grid;
        grid-template-columns: 70% 30%;
        gap: 20px;
    }
}

/* Header */

header {
    background-color: white;
    padding: 10px;
    border: 1px solid rgb(171, 170, 170);
    border-top: none;
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 6px;
}

.h-card > div {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 7px;
}

.h-card h1 {
    margin-bottom: 2px;
}

address.properties {
    margin-bottom: 16px;
}

/* Sidebar */

.sidebar-section {
    background-color: white;
    padding: 10px;
    border: 1px solid rgb(171, 170, 170);
    border-radius: 6px;
    margin-top: 10px;
}

.sidebar-section:first-child {
    border-top: none;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    margin-top: 0;
}

.sidebar-section h3 {
    margin-top: 0;
}

.sidebar-section p:last-child {
    margin-bottom: 0;
}

.sidebar-section.about {
    padding: 20px;
}

/* Menu */

nav ul {
    list-style: none;
}

nav ul li a {
    font-weight: 600;
    font-size: 23px;
}

/* Link styles */

a {
    color: rgb(255, 102, 102);
    text-decoration: none;
}
a:hover:not(.no-underline), a:focus:not(.no-underline) {
    text-decoration: underline;
}
a:active {
    color: black;
}

/* Posts & comments */
.h-entry, .comment {
    padding: 7px;
    border: 1px solid rgb(171, 170, 170);
    background-color: white;
    border-radius: 6px;
    display: flex;
    flex-direction: row;
    gap: 7px;
    margin-top: 15px;
    box-shadow: 10px 5px rgb(94, 152, 152), 11px 6px rgb(57, 107, 107);
}

.h-entry p, .comment p {
    font-size: 18px;
    margin-top: 0;
}

.e-content {
    flex-grow: 1;
}

.u-photo, .comment-photo {
    border-radius: 6px;
    aspect-ratio: 1/1;
    object-fit: cover;
}
.u-photo {
    width: 60px;
}
.comment-photo {
    width: 30px;
}

/* Small text underneath post */
.sub {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}
time, .sub * {
    font-size: 12px;
    color: rgb(84, 87, 94);
    display: inline;
    margin: 0;
}

/* Supertext (liked, repost, reply etc.) */
.h-entry p.title, .comment p.title {
    font-size: 16px;
    color: rgb(84, 87, 94); 
    margin-bottom: 3px;
}

/* Spacing between .sub and content */
.h-entry > div, .comment > div {
    display: flex;
    flex-direction: column;
}

/* Comment section */

.comments {
    padding: 0;
    margin: 0;
}

.comment {
    list-style: none;
}

.comment-section {
    margin-top: 90px;
}

.comment-section h2, .comment-section form a, .comment-section form p {
    color: white;
}

.comment-section form a {
    font-weight: bold;
    text-decoration: underline dotted;
}

/* Forms */

input, button {
    padding: 6px;
    font-size: 16px;
    outline-offset: 1px;
}

input:active, input:not([type="submit"]):not([type="button"]):focus, button:active {
    outline: 2px solid #b4d2ff;
}

input, button {
    color: black;
    border-radius: 0;
    border: 1px solid #a2a2a2;
}

button, input[type="submit"], input[type="button"] {
    cursor: pointer;
}

/* Misc & utilities */

.warning {
    padding: 7px;
    border: 1px solid rgb(184, 116, 0);
    background-color: rgb(255, 210, 132);
    color: rgb(73, 51, 12);
    border-radius: 6px;
    margin-top: 10px;
}

/* Render sharp pixelart */
.pixelart {
    image-rendering: -moz-crisp-edges;
    image-rendering: crisp-edges;
    image-rendering: pixelated;
}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	33% {
		background-position: 100% 50%;
	}
	66% {
		background-position: 50% 100%;
	}
    100% {
        background-position: 0% 50%;
    }
}

